feat: initial embedded runtime layer
Signed-off-by: Sam Gammon <sam@elide.ventures>